--- a/tapscript/index.html
+++ b/tapscript/index.html
@@ -11,6 +11,8 @@
       <h1>Change the Background Color by Clicking the</h1>
       <input type="text" disabled value="#000000" id="output" />
       <button id="btn">Change Color</button>
+      <p>the name </p>
+      <p>is my</p>
     </div>
 
     <script src="app.js"></script>
