--- a/tapscript/index.html
+++ b/tapscript/index.html
@@ -12,7 +12,7 @@
       <input type="text" disabled value="#000000" id="output" />
       <button id="btn">Change Color</button>
       <p>the name </p>
-      <p>is my</p>
+      <p>is my my 5th day </p>
     </div>
 
     <script src="app.js"></script>
